--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,6 @@
 workflows:
   unity-build:
-    name: Unity Build - ChickenRun
+    name: Unity Build - ForestArcher
     instance_type: mac_mini_m2
     max_build_duration: 120
     environment:
@@ -23,8 +23,8 @@ workflows:
       - name: Prepare Android keystore
         script: |
           echo "Decoding Android keystore..."
-          echo $CM_KEYSTORE_BASE64 | base64 --decode > chickenkfc.keystore
-          export ANDROID_KEYSTORE_PATH=chickenkfc.keystore
+          echo $CM_KEYSTORE_BASE64 | base64 --decode > ForestArcher.keystore
+          export ANDROID_KEYSTORE_PATH=ForestArcher.keystore
           export ANDROID_KEYSTORE_PASSWORD=$CM_KEYSTORE_PASSWORD
           export ANDROID_KEY_ALIAS=$CM_KEY_ALIAS
           export ANDROID_KEY_PASSWORD=$CM_KEY_PASSWORD
