--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,6 @@
 workflows:
   unity-build:
-    name: Unity Build - ForestArcher
+    name: Unity Build - ArcherMaster
     instance_type: mac_mini_m2
     max_build_duration: 120
     environment:
@@ -8,7 +8,7 @@ workflows:
       vars:
         BUILD_PLATFORM: android
       groups:
-        - unity_credentials # UNITY_SERIAL, UNITY_EMAIL, UNITY_PASSWORD, CM_KEY_ALIAS, CM_KEYSTORE_PASSWORD, CM_KEY_PASSWORD, CM_KEYSTORE_BASE64
+        - unity_credentials 
     scripts:
       - name: Activate Unity license
         script: |
@@ -39,17 +39,14 @@ workflows:
             -projectPath . \
             -executeMethod BuildScript.PerformBuild \
             -nographics
-
       - name: Return (deactivate) Unity license
         script: |
           echo "Returning Unity license..."
           "$UNITY_HOME/Contents/MacOS/Unity" \
           -batchmode -quit -returnLicense || true
 
-
     artifacts:
-      - ForestArcher.aab
-      - ForestArcher.apk
+      - ArcherMaster.aab
+      - ArcherMaster.apk
       - unity_build.log
       - unity_license.log
-      - unity_return_license.log 
